--- a/share/man/man4/etphy.4
+++ b/share/man/man4/etphy.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/etphy.4,v 1.1 2007/10/30 12:32:44 jsg Exp $
+.\"	$OpenBSD: src/share/man/man4/etphy.4,v 1.2 2007/10/30 13:22:21 jmc Exp $
 .\"
 .\" Copyright (c) 2007 Jonathan Gray <jsg@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: October 7 2007 $
+.Dd $Mdocdate: October 30 2007 $
 .Dt ETPHY 4
 .Os
 .Sh NAME
@@ -28,9 +28,9 @@ The
 driver supports the Agere/LSI ET1011 TruePHY 10/100/1000 Ethernet PHYs
 including the integrated TruePHY in ET1310 based adapters.
 .Sh SEE ALSO
-.Xr ifmedia 4
-.Xr intro 4
-.Xr mii 4
+.Xr ifmedia 4 ,
+.Xr intro 4 ,
+.Xr mii 4 ,
 .Xr ifconfig 8
 .Sh HISTORY
 The
