--- a/usr.bin/du/du.1
+++ b/usr.bin/du/du.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.bin/du/du.1,v 1.21 2007/05/31 19:20:09 jmc Exp $
+.\"	$OpenBSD: src/usr.bin/du/du.1,v 1.22 2007/10/31 16:31:32 jmc Exp $
 .\"	$NetBSD: du.1,v 1.6 1996/10/18 07:20:31 thorpej Exp $
 .\"
 .\" Copyright (c) 1990, 1993
@@ -145,7 +145,7 @@ utility is compliant with the
 specification.
 .Pp
 The flags
-.Op Fl chrP
+.Op Fl chPr
 are extensions to that specification.
 .Sh HISTORY
 A
