--- a/usr.bin/ftp/ftp.1
+++ b/usr.bin/ftp/ftp.1
@@ -1,4 +1,4 @@
-.\" 	$OpenBSD: src/usr.bin/ftp/ftp.1,v 1.61 2007/06/16 08:58:33 espie Exp $
+.\" 	$OpenBSD: src/usr.bin/ftp/ftp.1,v 1.62 2007/11/05 13:10:59 jmc Exp $
 .\" 	$NetBSD: ftp.1,v 1.22 1997/08/18 10:20:22 lukem Exp $
 .\"
 .\" Copyright (c) 1985, 1989, 1990, 1993
@@ -140,7 +140,7 @@ Sends a byte after each
 .Ar seconds
 period over the control connection during long transfers,
 so that incorrectly configured network equipment won't
-agressively drop it.
+aggressively drop it.
 The FTP protocol supports a
 .Dv NOOP
 command that can be used for that purpose.
