--- a/share/man/man4/mbg.4
+++ b/share/man/man4/mbg.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/mbg.4,v 1.8 2007/11/05 20:03:32 mbalmer Exp $
+.\"	$OpenBSD: src/share/man/man4/mbg.4,v 1.9 2007/11/05 20:18:58 mbalmer Exp $
 .\"
 .\" Copyright (c) 2006 Marc Balmer <mbalmer@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: November 4 2007 $
+.Dd $Mdocdate: November 5 2007 $
 .Dt MBG 4
 .Os
 .Sh NAME
@@ -26,7 +26,7 @@
 The
 .Nm
 driver provides support for Meinberg Funkuhren radio clocks (time signal
-station receivers and GPS devices).
+station and GPS receivers).
 .Nm
 implements a timedelta sensor and the delta (in nanoseconds) between the
 received time information and the local time can be accessed through the
