--- a/share/man/man4/umbg.4
+++ b/share/man/man4/umbg.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/umbg.4,v 1.1 2007/11/10 13:01:11 mbalmer Exp $
+.\"	$OpenBSD: src/share/man/man4/umbg.4,v 1.2 2007/11/10 14:13:57 mbalmer Exp $
 .\"
 .\" Copyright (c) 2007 Marc Balmer <mbalmer@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: November 10 2007 $
 .Dt UMBG 4
 .Os
 .Sh NAME
@@ -32,6 +32,38 @@ implements a timedelta sensor and the delta (in nanoseconds) between the
 received time information and the local time can be accessed through the
 .Xr sysctl 8
 interface.
+.Pp
+The quality of the timedelta is reported as the sensor status:
+.Bl -tag -width "CRITICALXX" -offset indent
+.It UNKNOWN
+No valid time information has been received yet.
+.It OK
+The time information is valid and the timedelta is safe to use for
+applications like
+.Xr ntpd 8 .
+.It WARN
+The time information is still valid, but no new time information has been
+decoded for at least twelve hours due to a reception or parity error.
+The timedelta should be used with care.
+.It CRITICAL
+No valid time information has been received for more than twelve hours since
+the sensor state degraded from OK to WARN.
+This is an indication that hardware should be checked
+to see if it is still functional.
+.El
+.Pp
+A second sensor provides the relative signal quality as percentage.
+The status of this sensor is used to report the status of the device itself:
+.Bl -tag -width "CRITICALXX" -offset indent
+.It OK
+The clock is synchronized.
+.It WARN
+The device's clock is free running on the local oscillator.
+This is not an error and can happen due to the nature of the signal
+transmission using longwave radio.
+.It CRITICAL
+Hardware failure, e.g. communication with the device failed.
+.El
 .Sh SEE ALSO
 .Xr intro 4 ,
 .Xr usb 4 ,
