--- a/share/man/man4/mbg.4
+++ b/share/man/man4/mbg.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/mbg.4,v 1.9 2007/11/05 20:18:58 mbalmer Exp $
+.\"	$OpenBSD: src/share/man/man4/mbg.4,v 1.10 2007/11/11 15:36:51 mbalmer Exp $
 .\"
 .\" Copyright (c) 2006 Marc Balmer <mbalmer@openbsd.org>
 .\"
@@ -48,6 +48,19 @@ Currently, the following cards are supported by
 3.3V/5V DCF77 time signal station receiver card
 .It PEX511
 PCI Express DCF77 time signal station receiver card
+.El
+.Pp
+A second sensor provides the relative signal quality as percentage.
+The status of this sensor is used to report the status of the device itself:
+.Bl -tag -width "CRITICALXX" -offset indent
+.It OK
+The clock is synchronized.
+.It WARN
+The device's clock is free running on the local oscillator.
+For DCF77 receiver cards this is not an error and can happen due to the
+nature of the signal transmission using longwave radio.
+.It CRITICAL
+Hardware failure, e.g. communication with the device failed.
 .El
 .Sh SEE ALSO
 .Xr intro 4 ,
