--- a/share/man/man4/man4.macppc/openprom.4
+++ b/share/man/man4/man4.macppc/openprom.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.macppc/openprom.4,v 1.2 2007/11/12 22:03:58 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.macppc/openprom.4,v 1.3 2007/11/13 10:11:52 kettenis Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -139,7 +139,8 @@ The given name or value field
 exceeds the maximum allowed length (8191 bytes).
 .El
 .Sh SEE ALSO
-.Xr ioctl 2
+.Xr ioctl 2 ,
+.Xr eeprom 8
 .Sh HISTORY
 A
 macppc
