--- a/share/man/man4/uticom.4
+++ b/share/man/man4/uticom.4
@@ -28,7 +28,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: November 11 2007 $
+.Dd $Mdocdate: November 16 2007 $
 .Dt UTICOM 4
 .Os
 .Sh NAME
@@ -40,10 +40,10 @@
 .Sh DESCRIPTION
 The
 .Nm
-driver supports serial port functionality on devices based on Texas
-Instruments TUSB3410 serial to USB converter chip.
+driver supports serial port functionality on devices based on the
+Texas Instruments TUSB3410 serial to USB converter chip.
 Note that the driver doesn't support devices which have internal
-EEPROM with firmware.
+EEPROM with firmware (yet).
 .Pp
 The device is accessed through the
 .Xr ucom 4
