--- a/usr.sbin/pppoe/pppoe.8
+++ b/usr.sbin/pppoe/pppoe.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.sbin/pppoe/pppoe.8,v 1.21 2007/05/31 19:20:28 jmc Exp $
+.\"	$OpenBSD: src/usr.sbin/pppoe/pppoe.8,v 1.22 2007/11/16 22:44:20 jmc Exp $
 .\"
 .\" Copyright (c) 2000 Network Security Technologies, Inc.
 .\" (http://www.netsec.net)
@@ -25,7 +25,7 @@
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt PPPOE 8
 .Os
 .Sh NAME
@@ -219,7 +219,8 @@ to adjust the maximum segment size on outgoing SYN packets.
 .Xr ifconfig 8 ,
 .Xr ppp 8
 .Rs
-.%T RFC 2516 A Method for Transmitting PPP Over Ethernet (PPPoE)
+.%R RFC 2516
+.%T A Method for Transmitting PPP Over Ethernet (PPPoE)
 .%A L. Mamakos, et al.
 .Re
 .Sh HISTORY
