--- a/share/man/man4/man4.i386/glxpcib.4
+++ b/share/man/man4/man4.i386/glxpcib.4
@@ -1,8 +1,8 @@
-.\"     $OpenBSD: src/share/man/man4/man4.i386/glxpcib.4,v 1.3 2007/11/16 21:30:55 mbalmer Exp $
+.\"     $OpenBSD: src/share/man/man4/man4.i386/glxpcib.4,v 1.4 2007/11/16 23:13:00 jmc Exp $
 .\"
 .\" Michael Shalayeff, 2007. Public Domain.
 .\"
-.Dd $Mdocdate: October 8 2007 $
+.Dd $Mdocdate: November 16 2007 $
 .Dt GLXPCIB 4 i386
 .Os
 .Sh NAME
@@ -22,11 +22,11 @@ Besides the core functionality, the
 driver implements a 32-bit 3.5 MHz timecounter, a watchdog timer device,
 and a GPIO device.
 .Sh SEE ALSO
+.Xr gpio 4 ,
 .Xr intro 4 ,
 .Xr isa 4 ,
 .Xr pci 4 ,
 .Xr pcib 4 ,
-.Xr gpio 4 ,
 .Xr watchdog 4
 .Sh HISTORY
 The
@@ -34,8 +34,10 @@ The
 driver first appeared in
 .Ox 4.3 .
 .Sh AUTHORS
+.An -nosplit
 The
 .Nm
-driver was written by Michael Shalayeff.
+driver was written by
+.An Michael Shalayeff .
 The GPIO parts were added by
-.An Marc Balmer Aq mbalmer@openbsd.org
+.An Marc Balmer Aq mbalmer@openbsd.org .
