--- a/share/man/man4/gpio.4
+++ b/share/man/man4/gpio.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/gpio.4,v 1.8 2007/05/31 19:19:50 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/gpio.4,v 1.9 2007/11/16 23:21:08 mbalmer Exp $
 .\"
 .\" Copyright (c) 2004 Alexander Yurchenko <grange@openbsd.org>
 .\"
@@ -149,6 +149,7 @@ file.
 .Xr ioctl 2 ,
 .Xr ath 4 ,
 .Xr elansc 4 ,
+.Xr glxpcib 4,
 .Xr gscpcib 4 ,
 .Xr isagpio 4 ,
 .Xr nsclpcsio 4 ,
