--- a/usr.sbin/gpioctl/gpioctl.8
+++ b/usr.sbin/gpioctl/gpioctl.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.sbin/gpioctl/gpioctl.8,v 1.9 2007/05/31 19:20:23 jmc Exp $
+.\"	$OpenBSD: src/usr.sbin/gpioctl/gpioctl.8,v 1.10 2007/11/17 09:05:23 mbalmer Exp $
 .\"
 .\" Copyright (c) 2004 Alexander Yurchenko <grange@openbsd.org>
 .\"
@@ -100,6 +100,8 @@ push-pull output
 tri-state (output disabled)
 .It pu
 internal pull-up enabled
+.It pd
+internal pull-down enabled
 .El
 .Pp
 Note that not all the flags can be supported by the particular
