--- a/usr.bin/top/top.1
+++ b/usr.bin/top/top.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.bin/top/top.1,v 1.49 2007/11/17 09:28:39 jmc Exp $
+.\"	$OpenBSD: src/usr.bin/top/top.1,v 1.50 2007/11/17 09:29:59 jmc Exp $
 .\"
 .\" Copyright (c) 1997, Jason Downs.  All rights reserved.
 .\"
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 17 2007 $
+.Dd $Mdocdate: November 17 2007 $
 .Dt TOP 1
 .Os
 .Sh NAME
@@ -427,7 +427,7 @@ brackets.)
 User-configurable defaults for options.
 .El
 .Sh FILES
-.Bl -tag -width Pa -compact
+.Bl -tag -width "/etc/passwdXXX" -compact
 .It Pa /dev/kmem
 kernel memory
 .It Pa /dev/mem
