--- a/share/man/man4/cardbus.4
+++ b/share/man/man4/cardbus.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man4/cardbus.4,v 1.58 2007/09/24 20:05:07 mglocker Exp $
+.\" $OpenBSD: src/share/man/man4/cardbus.4,v 1.59 2007/11/17 10:19:20 jmc Exp $
 .\" $NetBSD: cardbus.4,v 1.4 2000/02/02 19:57:17 augustss Exp $
 .\"
 .\" Copyright (c) 1999 The NetBSD Foundation, Inc.
@@ -72,7 +72,7 @@ Realtek 8129/8139 10/100 Ethernet device
 .It Xr acx 4
 TI ACX100/ACX111 IEEE 802.11a/b/g wireless network device
 .It Xr ath 4
-Atheros IEEE 802.11a/b/g wireless network device
+Atheros IEEE 802.11a/b/g wireless network device with GPIO
 .It Xr atw 4
 ADMtek ADM8211 IEEE 802.11b wireless network device
 .It Xr bwi 4
