--- a/usr.sbin/gpioctl/gpioctl.8
+++ b/usr.sbin/gpioctl/gpioctl.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.sbin/gpioctl/gpioctl.8,v 1.10 2007/11/17 09:05:23 mbalmer Exp $
+.\"	$OpenBSD: src/usr.sbin/gpioctl/gpioctl.8,v 1.11 2007/11/17 10:19:20 jmc Exp $
 .\"
 .\" Copyright (c) 2004 Alexander Yurchenko <grange@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: November 17 2007 $
 .Dt GPIOCTL 8
 .Os
 .Sh NAME
@@ -156,10 +156,7 @@ Write logical 1 to pin 20:
 .Pp
 .Dl # gpioctl 20 1
 .Sh SEE ALSO
-.Xr elansc 4 ,
-.Xr gpio 4 ,
-.Xr gscpcib 4 ,
-.Xr nsclpcsio 4
+.Xr gpio 4
 .Sh HISTORY
 The
 .Nm
