--- a/share/man/man4/man4.macppc/macgpio.4
+++ b/share/man/man4/man4.macppc/macgpio.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.macppc/macgpio.4,v 1.5 2007/11/17 10:19:20 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.macppc/macgpio.4,v 1.6 2007/11/17 10:50:27 mbalmer Exp $
 .\"
 .\" Copyright (c) 2007 Gordon Willem Klok <gwk@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: November 17 2007 $
 .Dt MACGPIO 4 macppc
 .Os
 .Sh NAME
@@ -37,7 +37,5 @@ provides support for the following devices:
 Xserve G4 and G5 front system identifier button
 .El
 .Sh SEE ALSO
-.Xr gpio 4 ,
 .Xr intro 4 ,
-.Xr macobio 4 ,
-.Xr gpioctl 8
+.Xr macobio 4
