--- a/share/man/man4/cardbus.4
+++ b/share/man/man4/cardbus.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man4/cardbus.4,v 1.59 2007/11/17 10:19:20 jmc Exp $
+.\" $OpenBSD: src/share/man/man4/cardbus.4,v 1.60 2007/11/17 14:10:06 jmc Exp $
 .\" $NetBSD: cardbus.4,v 1.4 2000/02/02 19:57:17 augustss Exp $
 .\"
 .\" Copyright (c) 1999 The NetBSD Foundation, Inc.
@@ -35,7 +35,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 15 2007 $
+.Dd $Mdocdate: November 17 2007 $
 .Dt CARDBUS 4
 .Os
 .Sh NAME
@@ -82,7 +82,7 @@ Marvell Libertas IEEE 802.11b/g wireless network device
 .It Xr pgt 4
 Conexant/Intersil Prism GT Full-MAC IEEE 802.11a/b/g wireless network device
 .It Xr ral 4
-Ralink Technology IEEE 802.11a/b/g wireless network device
+Ralink Technology IEEE 802.11a/b/g/Draft-N wireless network device
 .It Xr rtw 4
 Realtek RTL8180L IEEE 802.11b wireless network device
 .El
