--- a/share/man/man4/uticom.4
+++ b/share/man/man4/uticom.4
@@ -1,3 +1,4 @@
+.\" $OpenBSD: src/share/man/man4/uticom.4,v 1.3 2007/11/17 15:59:05 deraadt Exp $
 .\" Copyright (c) 2007
 .\"     The DragonFly Project.  All rights reserved.
 .\"
