--- a/share/man/man4/gpio.4
+++ b/share/man/man4/gpio.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/gpio.4,v 1.10 2007/11/17 10:10:26 mbalmer Exp $
+.\"	$OpenBSD: src/share/man/man4/gpio.4,v 1.11 2007/11/17 16:55:05 mbalmer Exp $
 .\"
 .\" Copyright (c) 2004 Alexander Yurchenko <grange@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: November 16 2007 $
+.Dd $Mdocdate: November 17 2007 $
 .Dt GPIO 4
 .Os
 .Sh NAME
@@ -135,6 +135,10 @@ output disabled
 internal pull-up enabled
 .It Dv GPIO_PIN_PULLDOWN
 internal pull-down enabled
+.It Dv GPIO_PIN_INVIN
+invert input
+.It Dv GPIO_PIN_INVOUT
+invert output
 .El
 .Pp
 Note that the
