--- a/usr.sbin/pcidump/pcidump.8
+++ b/usr.sbin/pcidump/pcidump.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.sbin/pcidump/pcidump.8,v 1.3 2007/10/22 08:29:09 jmc Exp $
+.\"	$OpenBSD: src/usr.sbin/pcidump/pcidump.8,v 1.4 2007/11/18 00:33:45 kettenis Exp $
 .\"
 .\" Copyright (c) 2007 Paul de Weerd <weerd@weirdnet.nl>
 .\"
@@ -22,7 +22,7 @@
 .Nd show PCI device data
 .Sh SYNOPSIS
 .Nm pcidump
-.Op Fl v
+.Op Fl v | Fl x | Fl xx
 .Op Fl d Ar pcidev
 .Sm off
 .Op Ar dev : bus : func
@@ -45,6 +45,10 @@ The options are as follows:
 Specify another file to use for PCI lookups.
 .It Fl v
 Shows detailed information about PCI devices.
+.It Fl x
+Shows a hexadecimal dump of the first 64 bytes of PCI config space.
+.It Fl xx
+Shows a hexadecimal dump of the full PCI config space.
 .El
 .Sh FILES
 .Bl -tag -width /dev/pci -compact
