--- a/sbin/reboot/reboot.8
+++ b/sbin/reboot/reboot.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/sbin/reboot/reboot.8,v 1.38 2007/08/01 21:35:26 deraadt Exp $
+.\"	$OpenBSD: src/sbin/reboot/reboot.8,v 1.39 2007/11/19 08:51:49 jmc Exp $
 .\"	$NetBSD: reboot.8,v 1.3 1995/10/05 05:36:21 mycroft Exp $
 .\"
 .\" Copyright (c) 1990, 1991, 1993
@@ -70,8 +70,6 @@ This option should probably not be used.
 .It Fl p
 Causes the system to power down, if it is being halted, and the
 hardware supports automatic power down.
-(Currently supported on some i386, luna88k, mac68k, macppc,
-sparc, sparc64 and zaurus platforms.)
 .Pp
 See also the description of
 .Va powerdown ,
