--- a/usr.sbin/hoststated/hoststated.conf.5
+++ b/usr.sbin/hoststated/hoststated.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.sbin/hoststated/Attic/hoststated.conf.5,v 1.57 2007/11/20 18:24:32 jmc Exp $
+.\"	$OpenBSD: src/usr.sbin/hoststated/Attic/hoststated.conf.5,v 1.58 2007/11/21 10:19:34 pyr Exp $
 .\"
 .\" Copyright (c) 2006, 2007 Reyk Floeter <reyk@openbsd.org>
 .\" Copyright (c) 2006, 2007 Pierre-Yves Ritschard <pyr@openbsd.org>
@@ -327,8 +327,12 @@ for a rdr rule in
 .Xr pf.conf 5 .
 It will ensure that multiple connections from the same source are
 mapped to the same redirection address.
-.It Ic table Ar name
+.It Xo
+.Ic table Ar name Op Ic port Ar port
+.Xc
 Specify the main table to be used.
+Optionally supply a port which will
+override the real port specification in the table.
 This is mandatory.
 .It Ic tag Ar name
 Automatically tag packets passing through the
