--- a/share/man/man4/agp.4
+++ b/share/man/man4/agp.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man4/agp.4,v 1.1 2007/11/25 17:11:11 oga Exp $
+.\" $OpenBSD: src/share/man/man4/agp.4,v 1.2 2007/11/25 20:46:51 jmc Exp $
 .\" Copyright (c) Owain Ainsworth <oga@openbsd.org>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
@@ -12,7 +12,7 @@
 .\" WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: November 25 2007 $
 .Dt AGP 4
 .Os
 .Sh NAME
@@ -22,8 +22,8 @@
 .Cd "agp* at pchb?"
 .Sh DESCRIPTION
 The
-.Nm 
-driver provides support from programming the AGP GART through
+.Nm
+driver provides support for programming the AGP GART through
 .Xr ioctl 2 .
 This support is used by the X server on some architectures.
 .Pp
@@ -127,7 +127,7 @@ typedef struct _agp_unbind {
 .Ed
 .El
 .Sh FILES
-.Bl -tag -width /dev/agpgart -compact
+.Bl -tag -width "/dev/agpgartXXX" -compact
 .It Pa /dev/agp?
 AGP GART device special files.
 .It Pa /dev/agpgart
